assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');


/* wildcard selector added to overide default browser settings - used from love running project*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*html {
    --s: 50px;
    --c: #191b22;
    --_s: calc(2*var(--s)) calc(2*var(--s));
    --_g: 35.36% 35.36% at;
    --_c: #0000 66%,#20222a 68% 70%,#0000 72%;
    background: 
      radial-gradient(var(--_g) 100% 25%,var(--_c)) var(--s) var(--s)/var(--_s), 
      radial-gradient(var(--_g) 0 75%,var(--_c)) var(--s) var(--s)/var(--_s), 
      radial-gradient(var(--_g) 100% 25%,var(--_c)) 0 0/var(--_s), 
      radial-gradient(var(--_g) 0 75%,var(--_c)) 0 0/var(--_s), 
      repeating-conic-gradient(var(--c) 0 25%,#0000 0 50%) 0 0/var(--_s), 
      radial-gradient(var(--_c)) 0 calc(var(--s)/2)/var(--s) var(--s) var(--c);
    background-attachment: fixed;
  }*/

  /*html {
	--u: 2.5vmin;
    --c1: hsl(0deg 0% 0%);
    --c2: hsl(212deg 4% 9%);
    --c3: hsl(212deg 7% 36%);
    --gp: 50%/calc(var(--u) * 5) calc(var(--u) * 10);
    --bp: calc(var(--u) * -2.5) calc(var(--u) * -5);
    height: 100vh;
    --bg: 
		radial-gradient(circle at 50% 25%, var(--c2) 23%, #fff0 25% 100%) var(--gp), 
		conic-gradient(from 270deg at 34% 46%, var(--c2) 0 12.5%, #fff0 0 100%) var(--gp), 
		conic-gradient(from 45deg at 66% 46%, var(--c2) 0 12.5%, #fff0 0 100%) var(--gp), 
		conic-gradient(from 180deg at 50% 80%, var(--c2) 0 12.5%, #fff0 0 100%) var(--gp), 
		conic-gradient(from 135deg at 50% 80%, var(--c2) 0 12.5%, #fff0 0 100%) var(--gp), 
		conic-gradient(from 0deg at 0% 20%, var(--c2) 0 12.5%, #fff0 0 100%) var(--gp), 
		conic-gradient(from -45deg at 100% 20%, var(--c2) 0 12.5%, #fff0 0 100%) var(--gp), 
		linear-gradient(180deg, var(--c2) 0 4.5%, #fff0 0 45.25%, var(--c2) 0 50%, #fff0 0% 100%) var(--gp), 
		radial-gradient(circle at 50% 25%, #fff0 0 25%, var(--c2) 26% 32%, #fff0 0 100%) var(--gp), 
		linear-gradient(165deg, var(--c3) -15%, var(--c1) 44%, #fff0 0 100%) var(--gp), 
		linear-gradient(180deg, var(--c1) 50%, #fff0 0 100%) var(--gp);
    background: var(--bg), var(--bg);
    background-position: 
		var(--bp), var(--bp), var(--bp), var(--bp), var(--bp), var(--bp), var(--bp), var(--bp), var(--bp), var(--bp), var(--bp), 
		0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0;
	background-color: var(--c2);
}*/

/* Game page */

#main-heading-one {
    display: flex;
    font-size: 12px;
    justify-content: center;
    margin-top: 15px;
}

/* used https://cssgradient.io/ to create gradient background */
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    /*background: #9800FF;*/
    background: linear-gradient(90deg, rgba(63, 202, 234, 1) 0%, rgba(8, 165, 90, 1) 42%);
}

/* starting images and scores */

#computer {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#user {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#rps-image-one {
    max-width: 70%;
    height: auto;
    border: 3px solid #000000;
    box-shadow: 3px 3px 3px #000000;
}

#rps-image-two {
    max-width: 70%;
    height: auto;
    border: 3px solid #000000;
    box-shadow: 3px 3px 3px #000000;
}

/* Button styles */

#the-game {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 40px;
}

#choices {
    display: flex;
    justify-content: space-evenly;
}

button {
    border: 2px solid #000000;
    border-radius: 4px;
}

.choice-btn {
    transition-duration: 0.4s;
    margin-right: 10px;
    font-family: "Josefin Sans", sans-serif;
    font-size: 20px;
    text-align: center;
    padding: 5px;
    background-color: #00FFA5;
    font-weight: bold;

}

#game-choices {
    margin-top: 5px;
}

#game-buttons {
    display: flex;
    justify-content: space-around;
}

#choice-statement {
    display: flex;
    font-size: 2rem;
    font-family: "Josefin Sans", sans-serif;
    justify-content: center;
    margin-bottom: 10px;
}

.reset-btn {
    transition-duration: 0.4s;
    margin-top: 10px;
    display: flex;
    color: black;
    background-color: #FF1900;
    font-weight: bold;
    padding: 5px;
    margin-bottom: 5px;
    font-size: 20px;
}


/* game area */

#game-message {
    display: flex;
    justify-content: center;
    font-family: "Josefin Sans", sans-serif;
    margin-top: 30px;
    margin-left: 20px;
}

#current-score-computer {
    font-family: "Josefin Sans", sans-serif;
    margin-top: 20px;
}

#current-score-user {
    margin-bottom: 20px;
    font-family: "Josefin Sans", sans-serif;
}

/* footer */

footer {
    bottom: 0;
    font-family: "Josefin Sans", sans-serif;
    font-size: 1rem;
    background-color: black;
    color: azure;
    width: 100%;
    margin-top: auto;
    text-align: center;
    padding-top: 10px;
    min-height: 50px;
    position: fixed;
}


/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {
    #main-heading-one {
        display: flex;
        font-size: 25px;
        justify-content: center;
    }

    /* Button styles */

    #choices {
        display: flex;
        justify-content: space-evenly;
        margin-top: 30px;
    }

    .choice-btn {
        transition-duration: 0.4s;
        margin-right: 10px;
        font-family: "Josefin Sans", sans-serif;
        font-size: 2rem;
        text-align: center;
        padding: 5px 5px 5px 5px;
    }

    #game-buttons {
        display: flex;
        justify-content: space-around;
        margin-top: 20px;
    }

    #choice-statement {
        display: flex;
        font-size: 2rem;
        font-family: "Josefin Sans", sans-serif;
        justify-content: center;
        margin-bottom: 10px;
    }

    .reset-btn {
        transition-duration: 0.4s;
        display: flex;
        color: black;
        background-color: red;
        font-weight: bold;
        padding: 5px;
        font-size: 2rem;
    }

    .home-btn {
        transition-duration: 0.4s;
        display: flex;
        color: black;
        background-color: rgb(0, 174, 255);
        font-weight: bold;
        padding: 5px;
        font-size: 2rem;
        text-decoration: none;
        margin-top: 10px;
        height: fit-content;
    }

    /* starting images */

    #rps-image-one {
        max-width: 100%;
        height: auto;
        margin-top: 20px;
    }

    #rps-image-two {
        max-width: 1000%;
        height: auto;
        margin-bottom: 30px;
    }

    /* game area */

    #current-score-computer {
        display: flex;
        justify-content: center;
        flex-direction: column;
        padding-left: 70px;
        font-size: 30px;
        text-align: center;
        margin-right: 80px;
        margin-top: 20px;
    }

    #current-score-user {
        display: flex;
        justify-content: center;
        flex-direction: column;
        padding-left: 70px;
        font-size: 30px;
        text-align: center;
        margin-right: 80px;
        margin-bottom: 20px;
    }

    /* footer */

    footer {
        bottom: 0;
        font-family: "Josefin Sans", sans-serif;
        font-size: 23px;
        background-color: black;
        color: azure;
        width: 100%;
        margin-top: auto;
        text-align: center;
        padding-top: 16px;
        min-height: 60px;
    }


}

/* Media query: laptops and desktops (992px and up) */
@media screen and (min-width: 992px) {
    #main-heading-one {
        display: flex;
        font-size: 25px;
        justify-content: center;
    }

    /* Button styles */

    #choices {
        display: flex;
        justify-content: space-evenly;
        margin-top: 30px;
    }

    .choice-btn {
        transition-duration: 0.4s;
        margin-right: 10px;
        font-family: "Josefin Sans", sans-serif;
        font-size: 2rem;
        text-align: center;
        padding: 5px 5px 5px 5px;
    }

    #game-buttons {
        display: flex;
        justify-content: space-around;
        margin-top: 20px;
        margin-bottom: 20px;
    }

    #choice-statement {
        display: flex;
        font-size: 2rem;
        font-family: "Josefin Sans", sans-serif;
        justify-content: center;
        margin-bottom: 10px;
    }

    .reset-btn {
        transition-duration: 0.4s;
        display: flex;
        color: black;
        background-color: red;
        font-weight: bold;
        padding: 5px;
        font-size: 2rem;
    }

    .start-btn {
        transition-duration: 0.4s;
        display: flex;
        color: black;
        background-color: rgb(0, 174, 255);
        font-weight: bold;
        padding: 5px;
        font-size: 2rem;
    }

    button:hover {
        color: #000000;
    }

    /* footer */

    footer {
        position: relative;
        bottom: 0;
        font-family: "Josefin Sans", sans-serif;
        font-size: 23px;
        background-color: black;
        color: azure;
        width: 100%;
        margin-top: auto;
        text-align: center;
        padding-top: 16px;
        min-height: 60px;
    }

}

